
	* src/plot2d.c (get_data): Treating timedata columns as strings allows
	functions column(N) and column("HEADER") to work on time data.
	Bug #1161

	* src/qtterminal/QtGnuplotScene.cpp: Enhanced text elements were not 
	being added to the current display group, so they were ignored by the
	plot toggling operation.  Now they are handled like any other text.

2013-05-20  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm:  It doesn't work to call EMF_setfont() before we
	enter graphics state.  Bugfix.

2013-05-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Valgrind found a case where df_column[foo].position
	had never been initialized.  Boom.

2013-05-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/svg.trm:  The 4.6 canvas and svg terminals both 
	require additional information about axis layout in order to correctly
	provide mouse coordinates for inverted axes (axis_min > axis_max).
	This patch changes the output files produced by gnuplot 4.6 so that the
	same javascript mousing code works for both 4.6 and 4.7 output.
	Bug #1230

2013-04-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise check_missing):  Treat empty fields in
	a csv file as "missing" rather than "bad".  This allows generating
	stacked histogram plots from a csv spreadsheet of sparse data.

2013-04-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_init):  Exit cleanly if initialization
	fails.

	* src/wxterminal/gp_cairo.c (gp_cairo_set_font):  Allow backslash ('\\')
	to be treated as an escape character in font names.  This can be 
	necessary if the font name contains a hyphen since otherwise it would be
	converted to a space.

	* src/qtterminal/QtGnuplotScene.cpp (processEvent):  Add pixmaps to
	current plot group so that image plots can be toggled.

2013-04-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/Makefile.in (gnuplot.info): Fix out-of-tree build (would