@@ -6,6 +6,7 @@ New features, changes and fixes since gnuplot version 4.6.3
 * FIX emf failed to initialize font correctly on some systems
 * FIX timedata columns can now be referred to via column(N) and column("HEAD")
 * FIX qt terminal toggling of enhanced text elements in plot with labels
+* FIX color/pattern generated for key entries for columnstacked histograms
 
 New features, changes and fixes in gnuplot version 4.6.3
 ========================================================
